--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                         <a href="https://vk.com/dudestep" target="_blank"><span class="fa fa-vk"></span></a>
                         <a href="#"><span class="fa fa-facebook"></span></a>
-                        <a href="#"><span class="fa fa-instagram"></span></a>
+                        <a href="https://instagram.com/is_it_dude5tep"><span class="fa fa-instagram"></span></a>
                         <a href="#"><span class="fa fa-github"></span></a>
                     </div>
                     <button type="button" name="Hire Me" class="hireMeBtn1" id="hiremeButton">HIRE ME!</button>
